[package]
name = "gos-sign"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
description = "GrapheneOS release signing"
license = "MIT"
repository = "https://github.com/pleme-io/gos-sign"

[[bin]]
name = "gos-sign"
path = "src/main.rs"

[dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
